--- a/app/assets/stylesheets/application.scss.css
+++ b/app/assets/stylesheets/application.scss.css
@@ -82,9 +82,9 @@ body {
     transform:translateY(-1rem);
     
    }
-  //  .card:hover ~.card, .card:focus-within{
-  //   transform:translateX(calc(-4rem)*-1);
-  //  }
+   .card:hover ~.card, .card:focus-within{
+     transform:translateX(calc(-4rem));
+   }
    img{
     height:300px;
    }
@@ -156,42 +156,11 @@ body {
   background-color: #f2eef7;
   color:rgb(211, 142, 142)
 }
-// .btn :hover{
-//   transform: scale(1.15);
-// }
-/* .sign-up{ */
-    /* position: relative;
-    min-height: 100%; */
-    /* height:50%;
-    width: 50%;
-    padding-top: 2rem; */
-    
-  /* } */
 
- /* .login-content{
-   
-    background-color: #57bbf5;
-    padding: 2rem;
-    width:80%;
-  } */
-  /* .unique{
-    background-color:rgb(198, 140, 212);
-    border: 1px solid white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  @media only screen and (max-width: 480px) {
-    table {
-        overflow-x: auto;
-        display: block;
-    }
-} */
+
 
  
   .cl{
-      /* padding-bottom: 1.5rem; */
       font-family: Georgia, 'Times New Roman', Times, serif;
   }
 
@@ -199,37 +168,7 @@ body {
     color: brown;
     font-size: 25px;
 }
-  /* .card{
-      background-color:rgb(198, 140, 212);
-      color:white;
-      height:50%;
-      transition: all 0.5s ease-in;
-     
-  }
-  .card :hover{
-    width:100%;
-    background-color: #140101;
 
-  } */
-  /* .heading {
-    color: white;
-    font-size: ;
-    transition: all 0.5s linear;
-
-}
-
-.heading:hover {
-    color: brown;
-    font-size: 4rem;
-} */
-/* .card-panel{
-  width:100%;
-  margin: 0 auto;
-  
-}
-  main {
-    flex: 1 0 auto;
-  } */
 
 .cly{
     width:100%;
@@ -245,12 +184,6 @@ body {
   text-align: center; 
 }
 
-/* .row{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-} */
 .contact p{
   text-align: center;
   color: white;
@@ -350,7 +283,3 @@ width: 100%;
 
 
 
-/* .menu-link:hover {
-  color: #1f93ff;
-  font-size: 2.5em;
-} */
