--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
       <%= link_to 'Activities',activities_path , class: 'nav-link' %>
       </li>
       <li>
-      <%= link_to current_user.email, edit_user_registration_path, class: 'nav-link' %>
+      <%= link_to 'Profile', edit_user_registration_path, class: 'nav-link' %>
       </li>
       <li class="nav-item heading">
       <%= link_to 'sign out',  destroy_user_session_path, class: 'nav-link' %>
