--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -31,7 +31,7 @@
   </div>
   <div class="field">
   <%= form.label :duration %>
-  <%= form.time_select :duration %>
+  <%= form.text_field  :duration %>
 </div>
 
 
