--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
       <%= link_to 'Profile', edit_user_registration_path, class: 'nav-link' %>
       </li>
       <li class="nav-item heading">
-      <%= link_to 'sign out',  destroy_user_session_path, class: 'nav-link' %>
+      <%= link_to 'sign out',  destroy_user_session_path, :method=> :delete, class: 'nav-link' %>
      
       </li>
 
