--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -26,7 +26,7 @@
           <% end %>
         </td>
         <td>
-        <%= link_to 'Destroy', activity, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to 'Delete', activity, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
    
         </td>
       </tr>
