--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,28 +6,28 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active heading">
+      <li class="nav-item active ">
       <%= link_to 'Home', root_path, class: 'nav-link' %>
       </li>
 
       <% if user_signed_in? %>
-      <li class="nav-item active heading">
+      <li class="nav-item active ">
       <%= link_to 'Activities',activities_path , class: 'nav-link' %>
       </li>
       <li>
       <%= link_to 'Profile', edit_user_registration_path, class: 'nav-link' %>
       </li>
-      <li class="nav-item heading">
+      <li class="nav-item ">
       <%= link_to 'sign out',  destroy_user_session_path, :method=> :delete, class: 'nav-link' %>
      
       </li>
 
       <%else%>
-        <li class="nav-item heading">
+        <li class="nav-item ">
         <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
 
       </li>
-      <li class="nav-item heading">
+      <li class="nav-item ">
       <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
       </li>
 
